cambios ultimo dia

--- a/Base.tex
+++ b/Base.tex
@@ -60,7 +60,6 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
-	
 	%=========================================================
 	% Portada
 	%\ThisLRCornerWallPaper{1}{cdt/theme/agua.png}
@@ -88,7 +87,8 @@
 	
 	%\hideControlVersion
 	\tableofcontents
-	\chapter{Capitulo 1}\label{cap:Cap1}
+	\cfinput{capitulo1/agradecimientos}
+	\chapter{Capítulo 1}\label{cap:Cap1}
 	\cfinput{capitulo1/introduccion} %ya
 	\cfinput{capitulo1/planteamientoproblema} %ya 
 	\cfinput{capitulo1/propuestasolucion}%ya
@@ -117,7 +117,7 @@
 	%un comentARIO PARA QUE PAREZCA DIF
 	\chapter{Interface de programación de aplicaciones de Luminus}\label{cap:Cap4.2}
 	\cfinput{capitulo4b/prototipo4}	
-	
+
 	\chapter{Instalador de Luminus}\label{cap:Cap5}
 	
 	\cfinput{capitulo5/instalador}
@@ -129,9 +129,9 @@
 	\chapter{Trabajo a futuro} \label{futurolol}
 	\cfinput{capitulo7/trabajoafuturo} 
 	\cfinput{capitulo7/referencias}\label{referencias}
-	\cfinput{capitulo7/caso}
 	\chapter{Anexos} 
 	\cfinput{capitulo6/a}\label{anexoa}
 	\cfinput{capitulo6/b}\label{anexob}
+	\cfinput{capitulo6/c}\label{anexoc}
 
 \end{document}
