--- a/capitulo1/estadoarte.tex
+++ b/capitulo1/estadoarte.tex
@@ -35,9 +35,9 @@ Actualmente en el mercado existen diferentes alternativas para los usuarios que 
 \end{itemize}
 
 Podría decirse que \emph{Luminus} es un híbrido entre las dos clasificaciones anteriormente citadas. Las principales características de \emph{Luminus} son las siguientes:
-\begin{itemize}	\item Trabaja con datos que se encuentra en distintos equipos de cómputo (Red distribuida).\\ 
+\begin{itemize}	
+	\item Trabaja con datos que se encuentra en distintos equipos de cómputo (Red distribuida).\\ 
 	\item El usuario puede seleccionar el algoritmo de minería de datos a utilizar para su funcionamiento dentro de un listado de algoritmos disponibles.\\ 
-	\item Es capaz de detectar cuando alguno de los nodos de datos es modificado antes de resolver un determinado problema.\\
-	\item Los datos son extraídos directamente de los repositorios en tiempo real.\\
-	\item Se trabaja con archivos JSON de los datos de entrada.\\ 
+	\item Se trabaja con archivos CSV O TXT de los datos de entrada.\\
+	\item Se crea un ambiente que soporta una configuración básica para realizar tareas de Big Data para frameworks como Hadoop y Spark.\\
 \end{itemize}
