--- a/capitulo1/introduccion.tex
+++ b/capitulo1/introduccion.tex
@@ -1,5 +1,5 @@
 \section{Introduccion}
-En el siglo XXI, el Big Data ha sido un tema que ha dado mucho de qué hablar, su estudio ha ido en constante crecimiento así como ha servido de gran manera a empresas dedicadas a las tecnologías de la información a generar conocimiento a partir de cantidades masivas de datos que no tienen una estructura muy bien definida. 
+En el siglo XXI, el Big Data ha sido un tema que ha dado mucho de qué hablar, su estudio ha ido en constante crecimiento y ha servido de gran manera a empresas dedicadas a las tecnologías de la información a generar conocimiento a partir de cantidades masivas de datos que no tienen una estructura muy bien definida. 
 El propio termino \texttt{Big Data} (Grandes Datos en español) lo hace entender, la cantidad de datos que se maneja es demasiado grande para ser siquiera almacenada o procesada de manera tradicional \cite{intro}. 
 \\
 Big Data provee a quien lo usa conocimiento que de otra forma le habría sido imposible obtener, dicho conocimiento permite hacer análisis de los resultados para con ellos obtener ideas que conduzcan a mejores decisiones y movimientos de negocios estratégicos, por lo anterior, Big Data puede llegar a significar una herramienta de alto valor para las empresas que posean la cantidad de datos suficientes para aplicarlo. 
