--- a/capitulo1/objetivos.tex
+++ b/capitulo1/objetivos.tex
@@ -10,5 +10,5 @@ learning), como reglas de asociación y árboles de decisión, a grandes volúme
 implementación de Big Data
 \item Programación de las rutinas de análisis de datos; algoritmos de aprendizaje de máquina.
 \item Pruebas y verificación de funcionamiento
-\item Generación de resultados (reportes y visualizaciones) del análisis de datos.
+\item Generación de reportes del análisis de datos.
 \end{itemize}
