--- a/capitulo1/propuestasolucion.tex
+++ b/capitulo1/propuestasolucion.tex
@@ -8,11 +8,11 @@ El ambiente de Big Data incluirá la aplicación de los siguientes algoritmos de
 \end{itemize}
 Así como la generación de conocimiento y resultados a partir de la aplicación de estos algoritmos.
 \\
-Haciendo un análisis de los datos correspondientes al caso de estudio, se propondrá el algoritmo de minería de datos que se recomienda para el caso de estudio, sin embargo, se podrá aplicar el algoritmo que el usuario experto desee sin que este análisis lo limite.
+Haciendo un análisis de los datos correspondientes al caso de estudio en cuestión se determinará si estos pueden soportar y ser aplicados a el algoritmo de minería de datos que el usuario experto desee aplicar. En caso de que esto no sea posible se notificará de esto al usuario experto para este pueda seleccionar otro algoritmo.
 \\
 Esta solución podrá implementarse en computadoras tradicionales, reduciendo así el costo económico de su implementación en gran medida, ya que se estaría eliminando la necesidad de comprar equipos especializados y ambientarlos.
 \\
-Debido a que el ambiente de Big Data del que hablamos requiere hacer uso, de varias computadoras tradicionales y cada una de ellas requiere llevar a cabo un proceso de instalación y configuración para que este pueda funcionar. Se desarrollará un instalador que permita simplificar esta tarea realizando todo este proceso desde un solo nodo que sera definido como nodo maestro.  
+Debido a que el ambiente de Big Data del que hablamos requiere hacer uso, de varias computadoras tradicionales y cada una de ellas requiere llevar a cabo un proceso de instalación y configuración para que este pueda funcionar. Se desarrollará un instalador que permita simplificar esta tarea realizando todo este proceso desde un solo nodo que será definido como nodo maestro.  
 \\
-La ejecución y puesta en marcha de los algoritmos de minería de datos se hará desde una plataforma web la cual será accedida por el usuario experto desde el navegador web de un ordenador unicamente conociendo la dirección IP asignada al nodo maestro.
+La ejecución y puesta en marcha de los algoritmos de minería de datos se hará desde una Interfaz de Programación de Aplicaciones que podrá ser soportada e incorporada en sistemas que corran haciendo uso del lenguaje de programación JAVA. 
 \\
