--- a/capitulo7/referencias.tex
+++ b/capitulo7/referencias.tex
@@ -5,6 +5,17 @@
 	\bibitem{Baz} \textsc{Manieviesa, P}, 2017
 	\textit{El Big Data en las empresas},Septiembre 21, 2017 Pymerang.com. Sitio web:http://www.pymerang.com/direccion-de-negocios/821-el-big-data-en-las-empresas.
 	%ref
+	\bibitem{Red} \textsc{Luján Mora, S}, 2002
+	\textit{Programación de aplicaciones web},1st ed. San Vicente (Alicante): Editorial Club Universitario, p.Indice de acronimos. Sitio Web: http://rua.ua.es/dspace/handle/10045/16995
+	%ref
+	\bibitem{Framework} \textsc{Gutiérrez ,Javier}, S/A
+	\textit{¿Qué es un framework web?} Marzo 12, 2019 lsu.es Sitio Web: www.lsi.us.es/\~javierj/investigacion\_ficheros/Framework.pdf
+	%ref
+	\bibitem{componentes} \textsc{Gutierrez,D}, 2010
+	\textit{Frameworks y Componentes} Marzo 12, 2019 codecompiling Sitio Web: http://www.codecompiling.net/files/slides/IS\_clase\_10\_frameworks\_componentes.pdf
+	%ref
+	\bibitem{compo} \textsc{Techopedia}, 2019
+	\textit{Software Library} Marzo 13, 2019 techopedia Sitio Web: https://www.techopedia.com/definition/3828/software-library
 	\bibitem{refi} \textsc{Joyanes, L} (2016)
 	<<Big Data, Análisis de grandes volúmenes de datos en organizaciones>>,
 	\textit{AlfaOmega},
