--- a/capitulo6/b.tex
+++ b/capitulo6/b.tex
@@ -57,7 +57,8 @@ function pedir_ip_maestro() {
 		fi
 	done
 	# Se escribe un 2 en el log de progreso de instalacion.
-	# El 2 corresponde a que se intrudujo de manera satisfactoria la IP del nodo maestro.
+	# El 2 corresponde a que se intrudujo de manera satisfactoria la IP del nodo 
+	maestro.
 	echo "2" > luminus-ins.log
 	pedir_ips_esclavos
 }
@@ -89,11 +90,15 @@ function pedir_ips_esclavos() {
 					ssh-copy-id -i ~/.ssh/id_rsa.pub root@$ipNodo
 					ssh root@$ipNodo "cp /etc/hosts.back /etc/hosts"
 					scp hosts.maestro root@$ipNodo:/etc/
-					ssh root@$ipNodo "cat /etc/hosts.maestro >> /etc/hosts"
+					ssh root@$ipNodo "cat /etc/hosts.maestro >> 
+					/etc/hosts"
 					ssh root@$ipNodo "rm /etc/hosts.maestro"
-					ssh root@$ipNodo "cp /etc/hosts /etc/hosts.back"
-					ssh root@$ipNodo "cp ~/bashrc ~/bashrc.back"
-					ssh-keygen -f "/root/.ssh/known_hosts" -R $ipNodo
+					ssh root@$ipNodo 
+					"cp /etc/hosts /etc/hosts.back"
+					ssh root@$ipNodo "cp ~/bashrc
+					 ~/bashrc.back"
+					ssh-keygen -f "/root/.ssh/known_hosts" -R 
+					$ipNodo
 					echo $nodo >> nombres.txt
 					echo $ipNodo >> ips.txt
 					contador=$((contador + 1))
@@ -110,9 +115,11 @@ function pedir_ips_esclavos() {
 	cp config-files/hdfs-site-config.back.xml config-files/hdfs-site-config.xml
 	numNodos=$((contador - 1))
 	echo $numNodos >> config-files/hdfs-site-config.xml
-	echo "</value> </property> </configuration>" >> config-files/hdfs-site-config.xml
+	echo "</value> </property> </configuration>" >> 
+	config-files/hdfs-site-config.xml
 	# Se escribe un 3 en el log de progreso de instalacion.
-	# El 3 corresponde a que se introdujeron de manera satisfactoria las IPs de los esclavos.
+	# El 3 corresponde a que se introdujeron de manera satisfactoria las IPs 
+	de los esclavos.
 	echo "3" > luminus-ins.log
 	instalar_java_maestro
 }
@@ -123,9 +130,11 @@ function instalar_java_maestro() {
 	mkdir /usr/lib/jvm
 	tar -xvf jdk-8u201-linux-x64.tar.gz
 	mv jdk1.8.0_201/ /usr/lib/jvm/java-8-oracle-hadoop
-	update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-8-oracle-hadoop/bin/java 1061
+	update-alternatives --install /usr/bin/java java 
+	/usr/lib/jvm/java-8-oracle-hadoop/bin/java 1061
 	# Se escribe un 4 en el log de progreso de instalacion.
-	# El 4 corresponde a la instalacion de java de manera satisfactoria en el nodo maestro.
+	# El 4 corresponde a la instalacion de java de manera satisfactoria en el
+	 nodo maestro.
 	echo "4" > luminus-ins.log
 	instalar_java_esclavos
 }
@@ -140,15 +149,18 @@ function instalar_java_esclavos() {
 			ssh -n root@$line "rm -rf /usr/lib/jvm/java-8-oracle-hadoop"
 			ssh -n root@$line "mkdir /usr/lib/jvm/"
 			ssh -n root@$line "tar -xvf /home/jdk-8u201-linux-x64.tar.gz"
-			ssh -n root@$line "mv jdk1.8.0_201/ /usr/lib/jvm/java-8-oracle-hadoop"
-			ssh -n root@$line "update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-8-oracle-hadoop/bin/java 1061"
+			ssh -n root@$line "mv jdk1.8.0_201/ 
+			/usr/lib/jvm/java-8-oracle-hadoop"
+			ssh -n root@$line "update-alternatives --install /usr/bin/java java 
+			/usr/lib/jvm/java-8-oracle-hadoop/bin/java 1061"
 		fi
 		contador="$((contador + 1))"
 	done < ips.txt
 	cp  ~/.bashrc.backup ~/.bashrc
 
 	# Se escribe un 5 en el log de progreso de instalacion.
-	# El 5 corresponde a la instalacion de java de manera satisfactoria en los esclavos.
+	# El 5 corresponde a la instalacion de java de manera satisfactoria en los 
+	esclavos.
 	echo "5" > luminus-ins.log
 	#instalar_scala
 }
@@ -168,7 +180,8 @@ function instalar_scala() {
 	done < ips.txt
 
 	# Se escribe un 6 en el log de progreso de instalacion.
-	# El 6 corresponde a la instalacion de scala de manera satisfactoria en el maestro y los esclavos.
+	# El 6 corresponde a la instalacion de scala de manera satisfactoria en el 
+	maestro y los esclavos.
 	echo "6" > luminus-ins.log
 	instalar_spark
 }
@@ -188,7 +201,8 @@ function instalar_spark() {
 	done < ips.txt
 
 	# Se escribe un 7 en el log de progreso de instalacion.
-	# El 7 corresponde a la instalacion de Spark de manera satisfactoria en el maestro y los esclavos.
+	# El 7 corresponde a la instalacion de Spark de manera satisfactoria en el 
+	maestro y los esclavos.
 	echo "7" > luminus-ins.log
 	configurar_spark_maestro
 }
@@ -208,14 +222,16 @@ function configurar_spark_maestro() {
 	echo "export SPARK_MASTER_HOST=$ipMaestro" >> /opt/spark/conf/spark-env.sh
 	
 	# Se escribe un 8 en el log de progreso de instalacion.
-	# El 8 corresponde a la configuracion de Spark de manera satisfactoria en el maestro.
+	# El 8 corresponde a la configuracion de Spark de manera satisfactoria en el
+	 maestro.
 	echo "8" > luminus-ins.log
 	instalar_hadoop_maestro
 }
 
 # Instalacion de Hadoop.
 function instalar_hadoop_maestro() {
-	# wget http://mirrors.sonic.net/apache/hadoop/common/hadoop-3.1.1/hadoop-3.1.1.tar.gz
+	# wget http://mirrors.sonic.net/apache/hadoop/commo
+	n/hadoop-3.1.1/hadoop-3.1.1.tar.gz
 	rm -rf /opt/hadoop
 	mkdir /opt/hadoop
 	tar -xzvf hadoop-3.1.1.tar.gz
@@ -227,43 +243,52 @@ function instalar_hadoop_maestro() {
 
 	# Modificacion del arhcivo de configuracion hadoop-env.sh
 	# Respaldo del archivo hadoop-env.sh
-	cp /opt/hadoop/etc/hadoop/hadoop-env.sh /opt/hadoop/etc/hadoop/hadoop-env.backup.sh 
-	# Limpieza del ar 	chivo
+	cp /opt/hadoop/etc/hadoop/hadoop-env.sh 
+	/opt/hadoop/etc/hadoop/hadoop-env.backup.sh 
+	# Limpieza del archivo
 	# echo "" > /opt/hadoop/etc/hadoop/hadoop-env.sh
-	# Sustitucion por el archivo con la variable de entorno JAVA_HOME con su valor correcto
+	# Sustitucion por el archivo con la variable de entorno JAVA_HOME con su valor 
+	correcto
 	cp config-files/hadoop-env-config.sh /opt/hadoop/etc/hadoop/hadoop-env.sh
 
 	# Modificacion del archivo de configuracion core-site.xml
 	# Respaldo del archivo core-site.xml
-	cp /opt/hadoop/etc/hadoop/core-site.xml /opt/hadoop/etc/hadoop/core-site.backup.xml
+	cp /opt/hadoop/etc/hadoop/core-site.xml 
+	/opt/hadoop/etc/hadoop/core-site.backup.xml
 	# Limpieza del archivo 
 	# echo "" > /opt/hadoop/etc/hadoop/core-site.xml
 	# Sustitucion por el archivo con la configuracion correcta
-	cp config-files/core-site-config.xml /opt/hadoop/etc/hadoop/core-site.xml
+	cp config-files/core-site-config.xml 
+	/opt/hadoop/etc/hadoop/core-site.xml
 
 	# Modificacion del archivo de configuracion hdfs-site.xml
 	# Respaldo del archivo hdfs-site.xml
-	cp /opt/hadoop/etc/hadoop/hdfs-site.xml /opt/hadoop/etc/hadoop/hdfs-site.backup.xml
+	cp /opt/hadoop/etc/hadoop/hdfs-site.xml 
+	/opt/hadoop/etc/hadoop/hdfs-site.backup.xml
 	# Limpieza del archivo
 	# echo "" > /opt/hadoop/etc/hadoop/hdfs-site.xml
 
 	# Sustitucion por el archivo con la configuracion correspondiente
-	cp config-files/hdfs-site-config.xml /opt/hadoop/etc/hadoop/hdfs-site.xml
+	cp config-files/hdfs-site-config.xml 
+	/opt/hadoop/etc/hadoop/hdfs-site.xml
 
 	# Configuracion de los archivos mapred y yarn.
 	./parser.sh
 
 	# Modificacion del archivo de configuracion mapred-site.xml
 	# Respaldo del archivo mapred-site.xml
-	cp /opt/hadoop/etc/hadoop/mapred-site.xml /opt/hadoop/etc/hadoop/mapred-site.backup.xml
+	cp /opt/hadoop/etc/hadoop/mapred-site.xml 
+	/opt/hadoop/etc/hadoop/mapred-site.backup.xml
 	# Limpieza del archivo
 	# echo "" > /opt/hadoop/etc/hadoop/mapred-site.xml
 	# Sustitucion por el archivo con la configuracion correspondiente
-	cp config-files/mapred-site-config.xml /opt/hadoop/etc/hadoop/mapred-site.xml
+	cp config-files/mapred-site-config.xml 
+	/opt/hadoop/etc/hadoop/mapred-site.xml
 
 	# Modificacion del archivo de configuracion yarn-site.xml
 	# Respaldo del archivo yarn-site.xml
-	cp /opt/hadoop/etc/hadoop/yarn-site.xml /opt/hadoop/etc/hadoop/yarn-site.backup.xml
+	cp /opt/hadoop/etc/hadoop/yarn-site.xml 
+	/opt/hadoop/etc/hadoop/yarn-site.backup.xml
 	# Limpieza del archivo
 	# echo "" > /opt/hadoop/etc/hadoop/yarn-site.xml
 	# Sustitucion por el archivo con la configuracion correspondiente
@@ -281,13 +306,15 @@ function instalar_hadoop_maestro() {
 	done < ips.txt
 
 	# Se escribe un 9 en el log de progreso de instalacion.
-	# El 9 corresponde a la configuracion de Hadoop de manera satisfactoria en el maestro.
+	# El 9 corresponde a la configuracion de Hadoop de manera satisfactoria 
+	#en el maestro.
 	echo "9" > luminus-ins.log
 	instalar_hadoop_esclavos
 }
 
 function instalar_hadoop_esclavos() {
-	# Copiado de los archivos de configuracion de hadoop del nodo maestro a los nodos esclavos
+	# Copiado de los archivos de configuracion de hadoop del nodo maestro 
+	#a los nodos esclavos
 	contador=1
 	while read line
 	do
@@ -296,19 +323,26 @@ function instalar_hadoop_esclavos() {
 			echo "Instalando Hadoop en nodo $contador ($line)..."
 			scp hadoop-3.1.1.tar.gz root@$line:/home/
 			ssh -qq root@$line < hadoop-ins.sh
-			scp config-files/core-site-config.xml root@$line:/opt/hadoop/etc/hadoop/core-site.xml
-			scp config-files/hadoop-env-config.sh root@$line:/opt/hadoop/etc/hadoop/hadoop-env.sh
-			scp config-files/hdfs-site-config.xml root@$line:/opt/hadoop/etc/hadoop/hdfs-site.xml
-			scp config-files/mapred-site-config.xml root@$line:/opt/hadoop/etc/hadoop/mapred-site.xml
-			scp config-files/yarn-site-config.xml root@$line:/opt/hadoop/etc/hadoop/yarn-site.xml
-			scp /opt/hadoop/etc/hadoop/workers root@$line:/opt/hadoop/etc/hadoop/workers
+			scp config-files/core-site-config.xml 
+			root@$line:/opt/hadoop/etc/hadoop/core-site.xml
+			scp config-files/hadoop-env-config.sh 
+			root@$line:/opt/hadoop/etc/hadoop/hadoop-env.sh
+			scp config-files/hdfs-site-config.xml 
+			root@$line:/opt/hadoop/etc/hadoop/hdfs-site.xml
+			scp config-files/mapred-site-config.xml 
+			root@$line:/opt/hadoop/etc/hadoop/mapred-site.xml
+			scp config-files/yarn-site-config.xml 
+			root@$line:/opt/hadoop/etc/hadoop/yarn-site.xml
+			scp /opt/hadoop/etc/hadoop/workers 
+			root@$line:/opt/hadoop/etc/hadoop/workers
 			contador=$((contador + 1))
 		fi
 		contador="$((contador + 1))"
 	done < ips.txt
 
 	# Se escribe un 10 en el log de progreso de instalacion.
-	# El 10 corresponde a la configuracion e instalacion de Hadoop en los nodos esclavos 
+	# El 10 corresponde a la configuracion e instalacion de Hadoop en los nodos 
+	#esclavos 
 	# de manera satisfactoria en el maestro.
 	echo "10" > luminus-ins.log
 }
@@ -319,63 +353,63 @@ pedir_ip_maestro
 instalar_hadoop_maestro
 
 # # Ciclo para recolectar la informacion del archivo log
-# contador=1
-# while read line
-# do
-# 	if [ $contador -eq 1 ] 
-# 	then
-# 		line=$line
-# 		break
-# 	fi
-# done < luminus-ins.log
+ contador=1
+ while read line
+ do
+ 	if [ $contador -eq 1 ] 
+ 	then
+ 		line=$line
+ 		break
+ 	fi
+ done < luminus-ins.log
 
-# echo $line
+ echo $line
 
 # # Switch para saber en que paso iniciara el instalador
-# if [ $line -eq '1' ] || [ $line -eq '10' ]
-# then
+ if [ $line -eq '1' ] || [ $line -eq '10' ]
+ then
 # 	pedir_ip_maestro
-# fi
-# if [ $line -eq '2' ]
-# then
-# 	echo "REANJUNDANDO INSTALACION..."
+ fi
+ if [ $line -eq '2' ]
+ then
+ 	echo "REANJUNDANDO INSTALACION..."
 # 	pedir_ips_esclavos
-# fi
-# if [ $line -eq '3' ]
-# then
-# 	echo "REANJUNDANDO INSTALACION..."
+ fi
+ if [ $line -eq '3' ]
+ then
+ 	echo "REANJUNDANDO INSTALACION..."
 # 	instalar_java_maestro
-# fi
-# if [ $line -eq '4' ]
-# then
-# 	echo "REANJUNDANDO INSTALACION..."
+ fi
+ if [ $line -eq '4' ]
+ then
+ 	echo "REANJUNDANDO INSTALACION..."
 # 	instalar_java_esclavos
-# fi
-# if [ $line -eq '5' ]
-# then
-# 	echo "REANJUNDANDO INSTALACION..."
+ fi
+ if [ $line -eq '5' ]
+ then
+ 	echo "REANJUNDANDO INSTALACION..."
 # 	instalar_scala
-# fi
-# if [ $line -eq '6' ]
-# then
-# 	echo "REANJUNDANDO INSTALACION..."
-# 	instalar_spark
-# fi
-# if [ $line -eq '7' ]
-# then
-# 	echo "REANJUNDANDO INSTALACION..."
-# 	configurar_spark_maestro
-# fi
-# if [ $line -eq '8' ]
-# then
-# 	echo "REANJUNDANDO INSTALACION..."
+ fi
+ if [ $line -eq '6' ]
+ then
+ 	echo "REANJUNDANDO INSTALACION..."
+ 	instalar_spark
+ fi
+ if [ $line -eq '7' ]
+ then
+ 	echo "REANJUNDANDO INSTALACION..."
+ #	configurar_spark_maestro
+ fi
+ if [ $line -eq '8' ]
+ then
+ 	echo "REANJUNDANDO INSTALACION..."
 # 	instalar_hadoop_maestro
-# fi
-# if [ $line -eq '9' ]
-# then
-# 	echo "REANJUNDANDO INSTALACION..."
-# 	instalar_hadoop_esclavos
-# fi
+ fi
+ if [ $line -eq '9' ]
+ then
+ 	echo "REANJUNDANDO INSTALACION..."
+ #	instalar_hadoop_esclavos
+ fi
 \end{lstlisting} 
 Código de scala-ins.sh
 \begin{lstlisting}
@@ -453,19 +487,27 @@ function generar_property() {
 function generar_mapred_site_xml() {
 	cp config-files/mapred-site-config.back.xml config-files/mapred-site-config.xml
 	# Property para el valor yarn.app.mapreduce.am.command-opts
-	# generar_property 'yarn.app.mapreduce.am.command-opts' '23' 'config-files/mapred-site-config.xml'
+	# generar_property 
+	#'yarn.app.mapreduce.am.command-opts' '23' 
+	#'config-files/mapred-site-config.xml'
 	# Property para el valor mapred.map.memory.mb
-	generar_property 'mapreduce.map.memory.mb' '18' 'config-files/mapred-site-config.xml'
+	generar_property 'mapreduce.map.memory.mb' 
+	'18' 'config-files/mapred-site-config.xml'
 	# Property para el valor mapreduce.reduce.memory.mb
-	generar_property 'mapreduce.reduce.memory.mb' '20' 'config-files/mapred-site-config.xml'
+	generar_property 'mapreduce.reduce.memory.mb' '20' 
+	'config-files/mapred-site-config.xml'
 	# Property para el valor yarn.app.mapreduce.am.resource.mb
-	generar_property 'yarn.app.mapreduce.am.resource.mb' '22' 'config-files/mapred-site-config.xml'
+	generar_property 'yarn.app.mapreduce.am.resource.mb' '22' 
+	'config-files/mapred-site-config.xml'
 	# Property para el valor mapreduce.map.java.opts
-	# generar_property 'mapreduce.map.java.opts' '19' 'config-files/mapred-site-config.xml'
+	# generar_property 'mapreduce.map.java.opts' '19' 
+	#'config-files/mapred-site-config.xml'
 	# Property para el valor mapreduce.java.opts
-	# generar_property 'mapreduce.reduce.java.opts' '21' 'config-files/mapred-site-config.xml'
+	# generar_property #'mapreduce.reduce.java.opts' '21' 
+	#'config-files/mapred-site-config.xml'
 	# Property para el valor mapreduce.task.io.sort.mb
-	# generar_property 'mapreduce.task.io.sort.mb' '24' 'config-files/mapred-site-config.xml'
+	# generar_property 
+	#'mapreduce.task.io.sort.mb' '24' 'config-files/mapred-site-config.xml'
 
 	echo '</configuration>' >> config-files/mapred-site-config.xml 
 }
@@ -474,13 +516,18 @@ function generar_mapred_site_xml() {
 function generar_yarn_site_xml() {
 	cp config-files/yarn-site-config.back.xml config-files/yarn-site-config.xml
 	# Property para el valor yarn.nodemanager.resource.memory-mb
-	generar_property 'yarn.nodemanager.resource.memory-mb' '17' 'config-files/yarn-site-config.xml'
+	generar_property
+	'yarn.nodemanager.resource.memory-mb' '17' 
+	'config-files/yarn-site-config.xml'
 	# Property para el valor yarn.scheuler.maximum.allocation-mb
-	generar_property 'yarn.scheduler.maximum.allocation-mb' '16' 'config-files/yarn-site-config.xml'
+	generar_property 'yarn.scheduler.maximum.allocation-mb' '16' 
+	'config-files/yarn-site-config.xml'
 	# Property para el valor yarn.scheuler.minimum.allocation-mb
-	generar_property 'yarn.scheduler.mimimum.allocation-mb' '15' 'config-files/yarn-site-config.xml'
+	generar_property 'yarn.scheduler.mimimum.allocation-mb' '15' 
+	'config-files/yarn-site-config.xml'
 	# Property para el valor yarn.app.mapreduce.am.command-opts
-	# generar_property 'yarn.app.mapreduce.am.command-opts' '23' 'config-files/yarn-site-config.xml'
+	# generar_property 'yarn.app.mapreduce.am.command-opts' '23' 
+	'config-files/yarn-site-config.xml'
 	echo '</configuration>' >> config-files/yarn-site-config.xml
 }
 
